<resources>
    <string name="app_name">Little-Souls</string>
    <string name="text_error_internal_server">Internal server error. Please retry!!!</string>
    <string name="text_error_timeout">Sorry, We lost you. Please retry!!!</string>
    <string name="text_error_connection">Look a like we lost you for a moment. Please retry!!!</string>
    <string name="internet_message_alert">Please check your internet connection.</string>
    <string name="no_data">No data</string>
    <string name="text_error_network_msg">No internet connection.Connect to the internet and try again.</string>
    <string name="text_error_network">No Internet connection!!!</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur\nadipisicing ut labore et dolor sit amet,\nconsectetur ut labore etdolore magna aliqua.</string>
    <string name="next_msg">Next</string>
    <string name="skip_msg">Skip</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="yoga">Yoga</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="breathing">Breathing</string>
    <string name="music">Music</string>
    <string name="access_your_account">Access your account</string>
    <string name="select_your_role">Select your role</string>
    <string name="proceed">Proceed</string>
    <string name="please_select_role">Please select your role</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_login_details_to_naccess_your_account">Enter your login details to\naccess your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_create_now">
        <font fgcolor="#919eab">Don\'t have an account?</font>
        <font fgcolor="#0f1a29">Sign up</font>
    </string>
    <string name="email_pas_error">Please enter email address &amp; password</string>
    <string name="email_valid_error">Please enter valid email</string>
    <string name="email_error">Please enter email address</string>
    <string name="password_error">Please enter password</string>
    <string name="password_validation_error">Your password should contains minimum 6 character length and should have combination of one special character, one capital letter and digits</string>
    <string name="error_fullname">Please enter first name</string>
    <string name="error_lastname">Please enter last name</string>
    <string name="error_phone">Please enter phone number</string>
    <string name="error_valid_phone">Please enter valid phone number</string>
    <string name="error_age">Please enter age</string>
    <string name="error_valid_age">Please enter valid age</string>
    <string name="please_enter_cardno">Please enter card number</string>
    <string name="please_enter_valid_cardno">Please enter valid card number</string>
    <string name="please_enter_holdername">Please enter your full name</string>
    <string name="please_enter_expDate">Please enter expiry date</string>
    <string name="please_enter_month">Please enter valid month</string>
    <string name="please_enter_year">Please enter valid year</string>
    <string name="please_enter_valid_expDate">Please enter valid expiry date</string>
    <string name="please_enter_cvv">Please enter your cvv</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="enter_your_registered_email_address_nand_you_will_be_receive_a_security_code">Enter your registered email address\nand you will receive a security code.</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="subscriber">Subscriber</string>
    <string name="subscribed">Subscribed</string>
    <string name="Unsubscriber">Unsubscriber</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parent">Parent</string>
    <string name="enter_the_following_parent_details_nto_create_your_profile">Enter the following parent details\nto create your profile</string>
    <string name="enter_the_following_child_details_nto_create_your_profile">Enter the following child details\nto create your profile</string>
    <string name="first_name">First name</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last name</string>
    <string name="child">Child</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="i_have_read_and_agree_to_the">I have read and agree to the</string>
    <string name="terms_and_conditions"><u>Terms and Conditions,</u>"</string>
    <string name="terms_and_conditions_profile">Terms and Conditions</string>
    <string name="privacy_policy_diclaimer_and_waiver"><u>Privacy Policy, Disclaimer and Waiver</u></string>
    <string name="card_details">Card Details</string>
    <string name="enter_the_following_payment_details_nto_create_your_payment_method">Enter the following payment details\nto create your payment method</string>
    <string name="chk_terms_error">Please accept our terms and condition</string>
    <string name="cardnumber">Card Number</string>
    <string name="exparydate">Month/Year</string>
    <string name="cvv">CVV</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="security_code">Security Code</string>
    <string name="enter_the_security_code">Enter the security code</string>
    <string name="verify">Verify</string>
    <string name="i_did_not_receive_code">I did not receive code</string>
    <string name="resend">Resend</string>
    <string name="profile">Profile</string>
    <string name="tracking">Tracking</string>
    <string name="my_videos">My Videos</string>
    <string name="home">Home</string>
    <string name="hi_christina">Hi, Christina!</string>
    <string name="welcome">Welcome</string>
    <string name="bring_your_body_mind_and_nspirit_into_balance_with_these_nfun_classes">Bring your body mind and\nspirit into balance with these\nfun classes!</string>
    <string name="bedtime_yoga">Bedtime Yoga</string>
    <string name="quick_routine_to_help_you_get_relaxed_and_have_nsweet_dreams_before_bed">Quick routine to help you get relaxed and have\nsweet dreams before bed!</string>
    <string name="morning_yoga">Morning Yoga</string>
    <string name="help_your_body_and_mind_stretch_to_wake_up_from_your_dreamy_sleep">Help your Body and Mind stretch to wake up\nfrom your dreamy sleep</string>
    <string name="press_back_again_to_exit">Press Back again to Exit.</string>
    <string name="your_video_has_been_downloaded_nsuccessfully">Your video has been downloaded\nsuccessfully!</string>
    <string name="go_to_my_video">Go to My Video</string>
    <string name="go_to_my_home">Go to Home</string>
    <string name="help_yourself_unwind_or_relax_nthrough_games_meditation_nand_yoga_nidra">Help yourself unwind or relax\nthrough games / meditation\nand Yoga Nidra</string>
    <string name="games">Games</string>
    <string name="meditation">Meditation</string>
    <string name="meditation1">Meditation1</string>
    <string name="yoga_nidra">Yoga Nidra</string>
    <string name="listen_and_go_on_a_journey_in_nyour_mind">Listen and go on a journey in\nyour mind</string>
    <string name="happy_island">Happy Island</string>
    <string name="loving_kindness">Loving Kindness</string>
    <string name="body_scan">Body Scan</string>
    <string name="body_scan1">Body Scan1</string>
    <string name="listen_and_go_on_a_journey_to_narrive_at_your_inner_calm">Listen and go on a journey to\narrive at your inner Calm</string>
    <string name="yoga_nidra1">Yoga Nidra1</string>
    <string name="yoga_nidra2">Yoga Nidra2</string>
    <string name="yoga_nidra3">Yoga Nidra3</string>
    <string name="yoga_nidra4">Yoga Nidra4</string>
    <string name="yoga_nidra5">Yoga Nidra5</string>
    <string name="yoga_nidra6">Yoga Nidra6</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="do_you_want_to_clear">Do you want to clear all saved data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="yoga_inro_des">Move, breathe and have fun on your mat.</string>
    <string name="mindfulness_inro_des">Be present with these mindfulness tools.</string>
    <string name="breathing_inro_des">Learn how to use your breath to help you.</string>
    <string name="music_inro_des">Release, Relax and listen to your music</string>
    <string name="find_the_calming_power_of_nconecting_to_your_breath">Find the calming power of\nconnecting to your breath!</string>
    <string name="circle_breath">Circle Breath</string>
    <string name="square_breath">Square Breath</string>
    <string name="triangle_breath">Triangle Breath</string>
    <string name="lazy_breath">Lazy 8 Breath</string>
    <string name="circle_breath_des">Learn how to take deep breaths in and out</string>
    <string name="square_breath_des">Calm, connect and get clarity</string>
    <string name="triangle_breath_des">Soothe the body and mind</string>
    <string name="lazy_breath_des">Relax and go inwards</string>
    <string name="choose_your_time_duration">Choose your time duration</string>
    <string name="_1_min">1 MIN</string>
    <string name="_3_min">3 MIN</string>
    <string name="_5_min">5 MIN</string>
    <string name="let_s_begin">Let\'s begin</string>
    <string name="in">In</string>
    <string name="use_your_own_music">Use Your Own Music</string>
    <string name="listen_to_and_play_your_very_nown_calming_mixes">Release, Relax and listen to your music</string>
    <string name="create_your_own_music">Soothing sounds and mixes</string>
    <string name="put_your_own_soothing_mixes_together">Put your own soothing mixes together</string>
    <string name="binaural_beats">Binaural Beats</string>
    <string name="binaural_beats_des">Let the sound waves help you be calm and focused</string>
    <string name="headphones_required">*Headphones Required</string>
    <string name="let_the_sound_waves_help_you_be_calm_nand_focused">Let the sound waves help you be calm\nand focused</string>
    <string name="relaxation">Relaxation</string>
    <string name="sleep">Sleep</string>
    <string name="focus">Focus</string>
    <string name="anxiety">Anxiety</string>
    <string name="adhd">ADHD</string>
    <string name="error_child">Please enter first name,last name &amp; age</string>
    <string name="error_parent"><![CDATA[Please enter first name,last name,email,phone & password]]></string>
    <string name="error_card"><![CDATA[Please enter card number,full name,expiry date & cvv]]></string>
    <string name="cullen_edwards">Cullen Edwards</string>
    <string name="norman_edwards">Norman Edwards</string>
    <string name="settings">Settings</string>
    <string name="wifi_only_downloads">Wifi-only Downloads</string>
    <string name="downloads">Downloads</string>
    <string name="clear_all">Clear All</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="wavier_agreement">Waiver Agreement</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="successfully_update_profile">Your details updated successfully</string>
    <string name="error_child_parent">Please enter your child and your details.</string>
    <string name="add_new_payment_method">+ Add New Payment Method</string>
    <string name="debit_card">Debit Card</string>
    <string name="edit_card">Edit Card</string>
</resources>