<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/neue_altegrotesk_medium"
                    android:text="@string/skip_msg"
                    android:textAllCaps="true"
                    android:textColor="@color/fontColor1"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"

                    android:fontFamily="@font/neue_altegrotesk_medium"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/fontColor1"
                    android:textSize="@dimen/_17ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSelectRoleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/neue_altegrotesk_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/enter_your_login_details_to_naccess_your_account"
                    android:textColor="@color/fontColor2"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:background="@drawable/et_backgroud">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@null"
                        android:drawableEnd="@drawable/ic_email"
                        android:drawableRight="@drawable/ic_email"
                        android:fontFamily="@font/neue_altegrotesk_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:imeOptions="actionNext"
                        android:textColor="@color/etTextColor"
                        android:textColorHint="@color/etHintColor"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/et_backgroud">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@null"
                        android:fontFamily="@font/neue_altegrotesk_regular"
                        android:hint="@string/password"
                        android:inputType="textWebPassword"
                        android:padding="@dimen/_10sdp"
                        android:imeOptions="actionDone"
                        android:textColor="@color/etTextColor"
                        android:textColorHint="@color/etHintColor"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/chkPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_minus9sdp"
                        android:button="@null"
                        android:checked="true"
                        android:drawableStart="@drawable/show_password"
                        android:drawableTint="@color/etHintColor" />
                </RelativeLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btnForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/neue_altegrotesk_regular"
                    android:gravity="end"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/fontColor2"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btnSignin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/role_button"
                    android:fontFamily="@font/neue_altegrotesk_semibold"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="@font/neue_altegrotesk_regular"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/don_t_have_an_account_create_now"
            android:textColor="@color/fontColor2"
            android:textSize="@dimen/_10ssp" />

    </RelativeLayout>
</layout>